add maxpermsize, remove legacy cms setting